[metadata]
name = DLTrainer-nickvasko
version = 0.0.1
author = Nick Vasko
author_email = nicholas.d.vasko@gmail.com
description = DLTrainer is an easy to use framework for quickly setting up deep learning experiments in PyTorch. This includes CPU, single GPU and distributed GPU experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickvasko/DLTrainer
project_urls =
    Bug Tracker = https://github.com/nickvasko/DLTrainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src